Test both preview and non-preview for ValueClassTest